public enum StateType {
    Idle,
    Chase,
    Patrol,
    Attack,
    Wander
}