' metaclass = MonoBehaviour
@startuml Enemy

enum StateType {
    Idle
    Wander
    Patrol
    Attack
    Chase
}

interface IStateData {
    +Transform transform
    +Target Target
    +RigidBody2D RB
    +Vector2 MoveDirection
    +float Speed
    +Animator Animator
}

abstract class State <<Serializable>>{
    +StateType _type
    -IStateData _stateSata
    +abstract Initialize(IStateData)
    +virtual Enter() 
    +virtual Update() 
    +virtual PhysicsUpdate() 
    +virtual Exit() 
}
State --> StateType

class StateMachine {
    +State CurrentState
    -Dictionary<StateType, State> _states
    +void AddState(StateType)
    +void ChangeState(StateType)
    +void Update()
    +void PhysicsUpdate()
}
StateMachine ..> SomeState1
StateMachine ..> SomeState2

class SomeState1 <<Serializable>> {
    -IStateData
}
SomeState1 <|.. State

class SomeState2 <<Serializable>> {
    -IStateData
}
SomeState2 <|.. State

class SomeEnemy1 {

}
SomeEnemy1 --> StateMachine
SomeEnemy1 <|.. IStateData

class SomeEnemy2 {

}
note top of SomeEnemy2 : Enemy logic and call switch states
SomeEnemy2 --> StateMachine
SomeEnemy2 <|.. IStateData

@enduml